Fix z-index issue for date picker

--- a/src/assets/scss/modules/components/localSearch.scss
+++ b/src/assets/scss/modules/components/localSearch.scss
@@ -16,7 +16,7 @@
       padding-right: 20px;
     }
     .other-wrapper{
-      z-index: 0;
+      z-index: 4000;
       @include for-phone-only {
         width:50%;
       }
