--- a/src/assets/scss/modules/components/searchedit.scss
+++ b/src/assets/scss/modules/components/searchedit.scss
@@ -2,6 +2,7 @@
   margin-top:70px;
   padding-top:20px;
   padding-bottom:20px;
+
   // padding-left: 5%;
   // padding-right: 5%;
   @include box-shadow(0px 4px 10px rgba(0, 0, 0, 0.05));
@@ -16,7 +17,7 @@
       padding-right: 20px;
     }
     .other-wrapper{
-      z-index: 0;
+      z-index: 4000;
       @include for-phone-only {
         width:50%;
       }
