--- a/src/assets/scss/modules/pages/detail.scss
+++ b/src/assets/scss/modules/pages/detail.scss
@@ -62,7 +62,7 @@
   .form-inline{
     justify-content: space-between !important;
     .other-wrapper {
-      z-index: 0;
+      z-index: 4000;
       width: 100%;
       margin-top:20px;
       @include for-phone-only {
